精简平台后端与元数据历史兼容代码
