# backend/docs/swagger.json
@@ -5453,14 +5453,12 @@
             "type": "integer",
             "enum": [
                 1,
-                2,
                 3,
                 4,
                 5,
                 6,
                 7,
                 8,
-                9,
                 10,
                 11,
                 12,
@@ -5468,14 +5466,12 @@
             ],
             "x-enum-varnames": [
                 "BigIntFieldType",
-                "FloatFieldType",
                 "VarcharFieldType",
                 "TextFieldType",
                 "BooleanFieldType",
                 "DateFieldType",
                 "DatetimeFieldType",
                 "TimeFieldType",
-                "TinyintFieldType",
                 "JsonFieldType",
                 "IntFieldType",
                 "SmallIntFieldType",
